; ModuleID = '/home/carl/AnghaBench/systemd/src/network/extr_networkd-util.c_kernel_route_expiration_supported.c'
source_filename = "/home/carl/AnghaBench/systemd/src/network/extr_networkd-util.c_kernel_route_expiration_supported.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i32 }

@kernel_route_expiration_supported.cached = internal global i32 -1, align 4
@.str = private unnamed_addr constant [7 x i8] c">= 4.5\00", align 1
@CONDITION_KERNEL_VERSION = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kernel_route_expiration_supported() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__, align 8
  %4 = load i32, i32* @kernel_route_expiration_supported.cached, align 4
  %5 = icmp slt i32 %4, 0
  br i1 %5, label %6, label %17

6:                                                ; preds = %0
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8** %7, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 1
  %9 = load i32, i32* @CONDITION_KERNEL_VERSION, align 4
  store i32 %9, i32* %8, align 8
  %10 = call i32 @condition_test(%struct.TYPE_3__* %3)
  store i32 %10, i32* %2, align 4
  %11 = load i32, i32* %2, align 4
  %12 = icmp slt i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %6
  %14 = load i32, i32* %2, align 4
  store i32 %14, i32* %1, align 4
  br label %19

15:                                               ; preds = %6
  %16 = load i32, i32* %2, align 4
  store i32 %16, i32* @kernel_route_expiration_supported.cached, align 4
  br label %17

17:                                               ; preds = %15, %0
  %18 = load i32, i32* @kernel_route_expiration_supported.cached, align 4
  store i32 %18, i32* %1, align 4
  br label %19

19:                                               ; preds = %17, %13
  %20 = load i32, i32* %1, align 4
  ret i32 %20
}

declare dso_local i32 @condition_test(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
